# 09112023_django

./: Dockerfile  Makefile  README.md  README_REDIS.md  docker-compose.yml  pyproject.toml  redis_python.py  script_in_file.sh
