[tool.poetry]
name = "09112023-django"
version = "0.1.0"
description = ""
authors = ["Василь Картичак <w.i.k.mailua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
